src/objects/Event_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Contacts</relationshipLabel>
        <relationshipName>Event_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events</label>
        <referenceTo>Events__c</referenceTo>
        <relationshipLabel>Event Contacts</relationshipLabel>
        <relationshipName>Event_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organizer</fullName>
                </value>
                <value>
                    <fullName>IT Contact</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Attendee-{00000}</displayFormat>
        <label>Attendee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>